Sonic The Exchanger

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body onload="Hello()">
         <div class="containers">
-            <h1>Sonic the Exchanger</h1>
+            <h1>Sonic The Exchanger</h1>
             <div class="container">
                 <h1 id="test" class="test">0</h1> 
             </div>
